[package]
name = "test7"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true          # enable link time optimization
opt-level = "z"     # optimize for size
strip = true        # strip symbols
panic = "abort"     # abort instead of unwinding stack on panic
debug = 1           # PDB file without debug symbols

[dependencies]
aes = "0.8.3"
assert_matches = "1.5.0"
base64 = "0.21.3"
chrono = "0.4.29"
cidr = "0.2.2"
cidr-utils = "0.5.10"
clap = { version = "4.4.2", features = ["derive"] }
ctr = "0.9.2"
log = { version = "0.4.20", features = ["std", "serde"] }
log4rs = "1.2.0"
miniz_oxide = "0.7.2"
rand = "0.8.5"
rand_chacha = "0.3.1"
rayon = "1.7.0"
sha2 = "0.10.7"
simplelog = "^0.12.1"
encryptliterals = { path = "encryptliterals" }     # custom macro for encrypting the config string and string literals
fetchzip = { path = "fetchzip" }                   # custom macro for downloading and extracting a ZIP resource at build time
obfuscateresource = { path = "obfuscateresource" } # custom macro for compressing and AES-encrypting a resource at build time

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.48.0"
features = [
    "Win32_Foundation",
]

# For Windows API
[target.'cfg(windows)'.dependencies.windows]
version = "0.51.1"
features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_NetManagement",
    "Win32_NetworkManagement_IpHelper",
]
